[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ubx"
version = "0.0.1"
description = "Interact with UBX ZED-F9P"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Michael Christoffersen"},
    {email = "mchristo28@gmail.com"}
]
dependencies = [
    "numpy",
    "pyserial",
]

[project.urls]
repository = "https://github.com/mchristoffersen/ubx"
